--- a/package.json
+++ b/package.json
@@ -16,17 +16,22 @@
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^5.1.0",
+    "file-type": "^21.0.0",
     "framer-motion": "^12.18.1",
     "jsonwebtoken": "^9.0.2",
     "motion": "^12.17.0",
+    "multer": "^2.0.1",
     "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "react-slick": "^0.30.3",
+    "sharp": "^0.34.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
