--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,20 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "archiver": "^7.0.1",
     "bcryptjs": "^3.0.2",
+    "canvas": "^3.1.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "file-type": "^18.7.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1",
     "mysql2": "^3.14.1",
-    "nodemailer": "^7.0.4"
+    "nodemailer": "^7.0.5",
+    "pdf2pic": "^3.2.0",
+    "pdfjs-dist": "^3.11.174",
+    "sharp": "^0.34.2"
   }
 }
